# gemini-youtube-automation

./: .env.example  .gitignore  README.md  SMOOTH_SUBTITLES_IMPLEMENTATION.md  app.py  architecture.md  code_review.md  explaination.md  generate_subtitles.py  generate_video.py  main.py  openai_models.md  plan.md  pyproject.toml  recompose_video.py  requirements.txt  scratchpad.md  test_pipeline.py
.github/workflows/: main.yml
assets/sfx/: README.md
src/: __init__.py  cli.py  config.py  generator.py
src/pipeline/: __init__.py  aligner_factory.py  alignment_types.py  api_models.py  audio_aligner.py  image_generator.py  models.py  motion_effects.py  orchestrator.py  pipeline.py  researcher.py  scene_planner.py  script_writer.py  stages.py  subtitle_renderer.py  video_composer.py  voice_generator.py  wav2vec2_aligner.py
src/pipeline/config/: __init__.py  emoji_mappings.yaml  emphasis_keywords.yaml
src/pipeline/prompts/: README.md  __init__.py  image_generator_thumbnail.md  researcher_system.md  researcher_user.md  scene_planner_image_prompt.md  script_writer_long_system.md  script_writer_long_user.md  script_writer_short_system.md  script_writer_short_user.md
src/utils/: __init__.py  ai_client.py
tests/: __init__.py  test_alignment_types.py  test_api_models.py  test_config.py  test_models.py  test_motion_effects.py  test_pipeline.py  test_subtitle_renderer.py  test_voice_generator.py
