[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-youtube-automation"
version = "0.1.0"
description = "AI-powered video generation pipeline for YouTube content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AI Video Generator Team"}
]
keywords = ["ai", "video", "youtube", "automation", "tts", "openai", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # AI APIs
    "openai>=1.0.0",
    "google-genai",
    "pydantic>=2.0.0",

    # Video Processing
    "moviepy==1.0.3",
    "Pillow>=9.5.0",

    # Audio / Text-to-Speech
    "gTTS",
    "pydub",

    # Web requests
    "requests",
    "aiohttp",

    # Environment and CLI
    "python-dotenv",

    # Configuration
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Web UI
ui = [
    "streamlit>=1.30.0",
]

# YouTube upload support
youtube = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

# Wav2Vec2 Force Alignment (FREE local alignment)
wav2vec2 = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
]

# Rich console output
rich = [
    "rich",
]

# All optional dependencies
all = [
    "gemini-youtube-automation[ui,youtube,wav2vec2,rich]",
]

[project.scripts]
generate-video = "src.cli:main"

[project.urls]
Homepage = "https://github.com/example/gemini-youtube-automation"
Documentation = "https://github.com/example/gemini-youtube-automation#readme"
Repository = "https://github.com/example/gemini-youtube-automation"
Issues = "https://github.com/example/gemini-youtube-automation/issues"

[tool.setuptools]
packages = ["src", "src.pipeline", "src.utils"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | output
    | assets
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
